// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TriggerManager should render with account 1`] = `
<div>
  <div
    id="coz-harvest-modal-place"
  />
  <Wrapper
    account={
      Object {
        "_id": "61c683295560485db0f34b859197c581",
        "account_type": "konnectest",
        "auth": Object {
          "passphrase": "bar",
          "username": "foo",
        },
        "identifier": "username",
      }
    }
    konnector={
      Object {
        "fields": Object {
          "passphrase": Object {
            "type": "password",
          },
          "username": Object {
            "type": "text",
          },
        },
        "slug": "konnectest",
      }
    }
    onSubmit={[Function]}
  />
</div>
`;

exports[`TriggerManager should render without account 1`] = `
<div>
  <div
    id="coz-harvest-modal-place"
  />
  <Wrapper
    konnector={
      Object {
        "fields": Object {
          "passphrase": Object {
            "type": "password",
          },
          "username": Object {
            "type": "text",
          },
        },
        "slug": "konnectest",
      }
    }
    onSubmit={[Function]}
  />
</div>
`;
